
[package]
name = "monkey-repl"
version = "0.1.0"
description = "Monkey programming language REPL"
authors = ["babalolajnr <babalolajnr@gmail.com>"]
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "repl"
path = "lib.rs"

[[bin]]
name = "monkey-repl"
path = "main.rs"

[dependencies]
monkey-lexer = { path = "../lexer" }
